[project]
name = "scGPT"
version = "0.2.2"
description = "Large-scale generative pretrain of single cell using transformer."
license = "MIT"
authors = [{ name = "Haotian", email = "subercui@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8,<3.11"


[project.urls]
Repository = "https://github.com/bowang-lab/scGPT"
Homepage = "https://github.com/bowang-lab/scGPT"

[build-system]
requires = [
    # flash-attn requires torch be installed first to build properly
    "torch >=1.13.0",
]

dependencies = [
    "pandas >=1.3.5",
    "scvi-tools >=0.16.0,<1.0",
    "scanpy >=1.9.1,<2.0.0",
    "torchtext",
    "numba >=0.55.1",
    "scikit-misc >=0.1.4",
    "umap-learn >=0.5.3",
    "leidenalg >=0.8.10",
    "datasets >=2.3.0,<3.0.0",
    "typing-extensions >=4.2.0,<5.0.0",
    "scib >=1.0.3,<2.0.0",
    "cell-gears <0.0.3",
    "orbax <0.1.8",
    "flash-attn >=1.0.1,<1.0.5",
]

[tool.uv]
managed = true
dev-dependencies = [
    "pytest >=5.2,<5.3",
    "black >=22.3.0,>22.4.0",
    "tensorflow >=2.8.0,<2.9.0",
    "torch-geometric >=2.3.0,<2.4.0",
    "dcor >=0.5.3,<0.6.0",
    "wandb >=0.12.3,<0.13.0",
    "plotly >=5.3.1,<6.0.0",
]
